--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,7 +1,3 @@
-#hero, #brands {
-  position: relative;
-}
-
 #hero .circle {
   width: 40%;
   position: absolute;
@@ -21,7 +17,6 @@
 }
 
 #about .svg object {
-  width: 20rem;
   height: 100%;
 }
 
@@ -29,7 +24,11 @@
   margin: 0 -.5rem;
 }
 
-#about .card:hover h3 {
+#about .card {
+  padding: 1.5rem;
+}
+
+#about .card:hover h4 {
   color: var(--dark-font-color);
 }
 
@@ -104,12 +103,35 @@
   transform: none;
 }
 
+.splide__slide .thick-bordered {
+  width: 100%;
+}
+
+#commissions .coins {
+  position: absolute;
+  right: 5rem;
+  bottom: 0;
+  width: 25%;
+}
+
+#commissions .light {
+  position: absolute;
+  width: 60%;
+  left: 0;
+  top: 0;
+}
+
 #commissions ul+div, #commissions ul {
   flex: 1;
 }
 
+#commissions .card.bg-transparent {
+  border-radius: 4.5rem;
+}
+
 #commissions li:not(:first-of-type):not(:last-of-type) {
-  margin: 1rem 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 #commissions .card.bg-transparent:hover * {
@@ -128,6 +150,40 @@
   overflow: visible;
 }
 
+#events .card {
+  border-radius: 20rem;
+  overflow: hidden;
+}
+
+#events .card .inner {
+  transform: translateY(1.5rem);
+  transition: var(--main-transition);
+}
+
+#events .card .cta-btn {
+  opacity: 0;
+  background: var(--tint-main);
+  transform: translateY(4rem);
+}
+
+#events .card:hover .inner, #events .card:hover .cta-btn {
+  transform: translateY(0);
+}
+
+#events .card .place {
+  color: var(--muted-main-font-color);
+}
+
+#events .card:hover h3 {
+  color: var(--dark-font-color);
+}
+
+#events .card:hover .cta-btn {
+  opacity: 1;
+  background: var(--tint-main);
+  transition-delay: .1s;
+}
+
 #events .my-carousel-progress {
   background: var(--muted-main-font-color);
   border-radius: 10px;
@@ -139,6 +195,25 @@
   border-radius: 10px;
   transition: var(--main-transition);
   width: 0;
+}
+
+#faq .coins_left {
+  margin: auto 0;
+  width: 20%;
+
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+}
+
+#faq .coins_right {
+  width: 20%;
+  margin: auto 0;
+
+  position: absolute;
+  bottom: -5rem;
+  right: 0;
 }
 
 #contact {
