--- a/css/common.css
+++ b/css/common.css
@@ -6,7 +6,7 @@ a {
   transition: var(--main-transition);
 }
 
-input {
+input, textarea {
   color: var(--main-font-color);
 }
 
@@ -116,7 +116,7 @@ p {
   position: relative;
 }
 
-input {
+input, textarea {
   width: inherit;
 
   padding: .8rem 2rem;
@@ -126,7 +126,7 @@ input {
   border-radius: 1.75rem;
 }
 
-form input~span {
+form input~span, form textarea~span {
   font-family: "Futura PT";
   font-size: .75rem;
 
@@ -137,7 +137,7 @@ form input~span {
   /* To make it exactly the same level as a placeholder,
    ** you have to sum input left padding and border thickness
    */
-  bottom: 2.5rem;
+  top: -.75rem;
 
   color: var(--dark-font-color);
   background-color: #fff;
