--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -6,10 +6,10 @@
 }
 
 #hero .light {
-  width: 130%;
+  width: 100%;
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
 }
 
 #hero .blog {
