--- a/css/common.css
+++ b/css/common.css
@@ -34,6 +34,86 @@ h3 {
   transition: var(--main-transition);
 }
 
+#header .burger {
+  padding: .25rem;
+  border: none;
+  background: none;
+}
+
+#nav-icon3 {
+  width: 21px;
+  height: 14px;
+  position: relative;
+  margin: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon3 span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: var(--main-font-color);
+  border-radius: 3px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon3 span:nth-child(1) {
+  top: 0;
+}
+
+#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+  top: 6px;
+}
+
+#nav-icon3 span:nth-child(4) {
+  top: 12px;
+}
+
+#nav-icon3.open span:nth-child(1) {
+  top: 6px;
+  width: 0;
+  left: 50%;
+}
+
+#nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon3.open span:nth-child(4) {
+  top: 4px;
+  width: 0;
+  left: 50%;
+}
+
+
 section:not(:first-of-type) {
   padding: 6rem 0;
 }
@@ -223,3 +303,44 @@ form input~span, form textarea~span {
   opacity: 1;
 }
 
+.sidebar {
+  padding-top: 9rem;
+  background-color: var(--main-bg-color);
+
+  z-index: var(--sidebar__z-index);
+
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+
+  transform: translateX(100%);
+  transition: var(--main-transition);
+}
+
+.sidebar.open {
+  transform: translateX(0);
+}
+
+.sidebar .btn {
+  width: 100%;
+  border-radius: 4rem;
+}
+
+.sidebar li:first-child .btn {
+  background-color: var(--tint-main);
+}
+
+.sidebar li:last-child .btn {
+  background-color: var(--hover-bg-color);
+}
+
+.sidebar li {
+  width: 100%;
+  margin-top: 1.5rem;
+
+  font-size: 2rem;
+
+  border-radius: 4rem;
+}
