--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,18 @@
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
 a, h2 {
   color: inherit;
 }
@@ -189,6 +204,13 @@ p {
 
 .filters .btn {
   border: none;
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+.filters .btn.active {
+  background: var(--hover-bg-color);
 }
 
 .filters .btn.selected {
