--- a/css/pages/single_news.css
+++ b/css/pages/single_news.css
@@ -123,7 +123,8 @@
   background: rgba(var(--font), 0.12);
 }
 
-.subscribe-form header {
+.subscribe-form header h5 {
+  font-size: 2.4rem;
   color: var(--main-font-color);
   text-transform: uppercase;
 }
@@ -151,5 +152,15 @@
 
   .quote object {
     width: initial;
+  }
+
+  .subscribe-form header h5 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1441px) {
+  .subscribe-form header h5 {
+    font-size: 1.3rem;
   }
 }
