--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -182,6 +182,20 @@
   color: var(--hover-bg-color);
 }
 
+#commissions #filters-group.filters li {
+  margin: 0;
+}
+
+.filters .btn.active {
+  color: var(--dark-font-color);
+}
+
+.filters .btn {
+  padding: .5rem 1rem;
+  font-size: .9rem;
+
+}
+
 #events {
   overflow: hidden;
 }
