--- a/css/fonts.css
+++ b/css/fonts.css
@@ -9,3 +9,9 @@
   font-style: normal;
   src: url('../assets/fonts/Futura PT/FuturaPT-Medium.ttf');
 }
+
+@font-face {
+  font-family: 'Lexend Bold';
+  font-style: normal;
+  src: url('../assets/fonts/Lexend/Lexend-Bold.ttf');
+}
