clickable header logo

--- a/css/header.css
+++ b/css/header.css
@@ -6,6 +6,10 @@
   z-index: var(--sticky-header__z-index);
 }
 
+#header .logo {
+  pointer-events: none;
+}
+
 header .bordered {
   border-radius: 4rem;
   background-color: var(--main-bg-color);
