--- a/css/pages/careers.css
+++ b/css/pages/careers.css
@@ -18,6 +18,7 @@
 }
 
 #hero .bg.circle {
+  pointer-events: none;
   position: absolute;
 
   width: 100%;
@@ -36,6 +37,7 @@
 }
 
 #positions .bg.circle {
+  pointer-events: none;
   width: 60%;
   margin: auto;
 
@@ -46,6 +48,7 @@
 }
 
 #cv .bg.light {
+  pointer-events: none;
   width: 100%;
   margin: auto;
 
@@ -92,6 +95,7 @@
 }
 
 #offer .bg.light {
+  pointer-events: none;
   width: 45%;
 
   position: absolute;
