--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,4 +1,5 @@
 #hero .circle {
+  pointer-events: none;
   width: 40%;
   position: absolute;
   right: 0;
@@ -6,21 +7,23 @@
 }
 
 #hero .light {
+  pointer-events: none;
   width: 100%;
   position: absolute;
   left: 0;
   top: 0;
 }
 
-#hero .blog {
+#hero #blog {
+  display: flex;
   padding: 1.5rem;
 
+  overflow: hidden scroll;
   width: 100%;
   max-height: 38rem;
 
   font-size: 1.5rem;
 
-  overflow: scroll;
   border: 3px solid var(--secondary);
   border-radius: 6.25rem;
 
@@ -77,6 +80,7 @@
 }
 
 #brands .circle {
+  pointer-events: none;
   margin: 0 auto;
   width: 60%;
   position: absolute;
@@ -193,7 +197,6 @@
 .filters .btn {
   padding: .5rem 1rem;
   font-size: .9rem;
-
 }
 
 #events {
