--- a/lib/scrollbar.css
+++ b/lib/scrollbar.css
@@ -115,7 +115,7 @@
 .simplebar-track {
   z-index: 1;
   position: absolute;
-  right: 0;
+  right: 8px;
   bottom: 0;
   pointer-events: none;
   overflow: hidden;
