--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -66,7 +66,20 @@
   color: var(--muted-main-font-color);
 }
 
-#about .card, #about .svg {
+#about .coin {
+  flex-basis: 23%;
+}
+
+.about_cards {
+  flex-basis: 100%;
+}
+
+#about .inner, .about_cards, .about_cards ul {
+  gap: 1rem;
+}
+
+#about .card {
+  margin: 0;
   flex: 1;
 }
 
@@ -76,10 +89,6 @@
 
 #about .svg object {
   width: 100%;
-}
-
-#about ul {
-  margin: 0 -.5rem;
 }
 
 #about .card {
