--- a/lib/scrollbar.css
+++ b/lib/scrollbar.css
@@ -164,7 +164,7 @@
 }
 
 .simplebar-scrollbar.simplebar-visible:before {
-  opacity: .5;
+  opacity: 1;
   transition-delay: 0s;
   transition-duration: 0s;
 }
