--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -29,9 +29,10 @@
 /*}*/
 
 #hero #blog {
-  padding: 1.5rem;
+  padding: 1.5rem 2.5rem 1.5rem 1.5rem;
 
   display: flex;
+  overflow: hidden;
   flex-basis: 33%;
 
   width: 100%;
