--- a/lib/scrollbar.css
+++ b/lib/scrollbar.css
@@ -56,6 +56,7 @@
   overflow: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
+  border-radius: inherit;
 }
 
 .simplebar-content-wrapper::-webkit-scrollbar,
