--- a/css/reset.css
+++ b/css/reset.css
@@ -35,7 +35,7 @@ img, picture, video, canvas, svg {
 /*
   7. Remove built-in form typography styles
 */
-input, button, textarea, select {
+button {
   font: inherit;
 }
 /*
