--- a/css/pages/news.css
+++ b/css/pages/news.css
@@ -53,6 +53,7 @@
 }
 
 .news-content .publication-date {
+  font-size: 2rem;
   text-align: right;
   flex-basis: 60%;
 }
@@ -81,25 +82,56 @@
 }
 
 .news-content h4 {
+  margin-top: 2rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
 }
 
 .news-content h5 {
+  font-size: 1.6rem;
   color: var(--secondary-font-color);
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .news-content .news-tag {
-  padding: .5rem 1rem;
+  padding: .7rem 1.2rem;
   text-transform: uppercase;
 
+  font-size: 1.5rem;
   background: var(--btn-bg-color);
   border-radius: 2rem;
+}
+
+.news-tag object {
+  width: 16px;
+}
+
+.news-tag span {
+  margin-left: 6px;
 }
 
 @media (min-width: 768px) {
   #news {
     background-size: 100%;
+  }
+
+  .news-content h4 {
+    margin-top: 0;
+    font-size: 2.4rem;
+    text-transform: uppercase;
+  }
+
+  .news-content h5 {
+    font-weight: bold;
+  }
+
+  #news .bg.coins-bottom {
+    bottom: -10%;
+  }
+
+  .news-content .news-tag {
+    padding: .5rem 1rem;
+    font-size: 1rem;
   }
 
   .news-content {
@@ -108,6 +140,10 @@
 
   .news-content img {
     border-radius: 10rem;
+  }
+
+  .news-content .publication-date {
+    font-size: 1.6rem;
   }
 
   .news-content .publication-date, .news-content .news-tag {
