--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,10 @@ footer.thick-bordered {
   border-top-right-radius: 4rem;
 }
 
+#footer .container > * {
+  flex: 1;
+}
+
 footer nav a:hover {
   text-decoration: underline;
 }
